media queries for index page

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     position:absolute;
     left:0;
     width:100%;
+    overflow-x:hidden;
     margin-top:10vh;
 }
 .fullindex{
@@ -24,11 +25,11 @@
     height:auto;
     margin-top:10px;
     display:grid;
-    grid-template-columns: 35vw 35vw 10vw 20vw;
+    grid-template-columns: 35% 35% 10% 20%;
     grid-template-rows: auto auto;
     align-items:center;
     border-bottom:1px solid black;
-    padding-bottom:8px;
+    padding-bottom:10px;
     cursor:pointer;
     transition:.325s;
 }
@@ -64,34 +65,36 @@
 .extender{
     position:relative;
     display:inline-grid;
-    grid-template-columns: 35vw 65vw;
+    grid-template-columns: 35% 32.5% 32.5%;
+    max-width:100%;
     grid-template-rows: auto auto;
     height:auto;
     grid-row:2;
     grid-column:1/span 4;
-    margin-right:20px;
+    padding-right:10px;
     padding-top:20px;
 }
 .extender img{
     position:relative;
     display:inline-block;
-    margin-right:8px;
-    max-height: 280px;
-    max-width:100%;
+    margin-right:10px;
+    height: auto;
+    width:100%;
 }
 .images{
-    grid-column:2;
-    display:flex;
+    grid-column-start:2;
+    display:inline-flex;
     justify-content:flex-start;
     position:relative;
     max-width:100%;
-    margin-right:10px;
+    padding-right:10px;
 }
 .words{
     font-family: 'Sans Regular';
     position:relative;
     max-width:90%;
     line-height:1.25;
+    transition:.2s;
 }
 /*-----------------------------------meeeeeeeedia queeeeeeeeeeeeeerieesssssssssss-------------------*/
 @media (max-width: 1100px){
@@ -108,28 +111,54 @@
         display:none;
     }
 }
+@media (max-width:1000px){
+    .words{
+        font-size:14.5px;
+    }
+}
 @media (max-width: 800px){
     .listing{
-        font-size:13px;
+        font-size:14.5px;
         margin-top:8px;
         margin-bottom:8px;
         padding-bottom:8px;
+        line-height:1.3;
     }
     .more{
-        font-size:13px;
+        font-size:14.5px;
+        line-height:1.3;
+    }
+    .extender img:nth-of-type(2){
+        display:none;
+    }
+    .extender img{
+        grid-column:2/span 3;
+    }
+    .images{
+        grid-column: 2/span 3;
     }
 
 }
-@media (max-width: 675px){
-    .listing{
-        font-size:13px;
-        margin-top:12px;
-        margin-bottom:8px;
-        padding-bottom:16px;
-    }
+@media (max-width: 725px){
     .title, .description{
         vertical-align:top;
         padding-right:30px;
+    }
+    .extender{
+        grid-row-gap: 20px;
+    }
+    .images{
+        grid-column:1/span 4;
+    }
+    .words{
+        grid-column:1/span 3;
+        grid-row:2;
+        font-size:16px;
+        padding-bottom:6px;
+    }
+    .extender img{
+        grid-column:1/span 4;
+        grid-row:1;
     }
 
 }
