--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@
     grid-row:2;
     grid-column:1/span 4;
     padding-right:10px;
-    padding-top:20px;
+    padding-top:10px;
 }
 .extender img{
     position:relative;
@@ -83,6 +83,7 @@
 }
 .images{
     grid-column-start:2;
+    grid-row:1/span 2;
     display:inline-flex;
     justify-content:flex-start;
     position:relative;
@@ -95,7 +96,32 @@
     max-width:90%;
     line-height:1.25;
     transition:.2s;
+    padding-bottom:10px;
 }
+.buttons{
+    display:inline-flex;
+    position:relative;
+    padding-right:60px;
+    bottom:0;
+    margin-bottom:0;
+    padding-bottom:0;
+    font-family: "Neue Machina";
+    grid-column:1;
+    grid-row:2;
+    vertical-align: bottom;
+    justify-content:flex-start;
+    align-content:flex-end;
+}
+.buttons a{
+    position:relative;
+    margin-right: 20px;
+    align-self:flex-end;
+    transition: background-color, box-shadow;
+    transition-duration:.5s;
+    padding:1px;
+    border-radius:8px;
+}
+
 /*-----------------------------------meeeeeeeedia queeeeeeeeeeeeeerieesssssssssss-------------------*/
 @media (max-width: 1100px){
     .listing{
