--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+.back{
+    justify-self:flex-end;
+}
 #fullindex{
     position:absolute;
     left:0;
@@ -205,6 +208,7 @@
         grid-column:1/span 4;
         grid-row:1;
     }
+    
 
 }
 
