--- a/css/style.css
+++ b/css/style.css
@@ -652,16 +652,19 @@ display:none;
     padding-right:10px;
   }
   #homepage{
-    width:100vw;
+    width:98vw;
     position:absolute;
     min-height:100vh;
     top:4.5vh;
     margin-top:0;
+    margin-right:10px;
     display:flex;
     left:0;
     right:0;
     padding:0;
     flex-direction:column;
+    overflow-x:hidden;
+    overflow-y:scroll;
   }
   .pic #label{
     font-size:18px;
@@ -670,7 +673,7 @@ display:none;
   }
   .pic{
     position:relative;
-    max-width:99%;
+    max-width:98%;
     height:auto;
     cursor:pointer;
     left:10px;
