--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,15 @@
 .back{
     justify-self:flex-end;
 }
+
 #fullindex{
-    position:absolute;
-    left:0;
-    width:100%;
-    overflow-x:hidden;
+    position:relative;
+    left:-10px;
+    margin:0;
+    padding:0;
+    width:100vw;
     margin-top:10vh;
-}
-.fullindex{
-    justify-self:flex-end;
+
 }
 .indexbottom{
     display: inline-flex;
@@ -22,16 +22,17 @@
   }
 .listing{
     position:relative;
-    padding-left:10px;
     padding-right:10px;
+    padding-left:10px;
     width:100%;
     height:auto;
     margin-top:10px;
+    border-bottom:1px solid black;
     display:grid;
     grid-template-columns: 35% 35% 10% 20%;
     grid-template-rows: auto auto;
     align-items:center;
-    border-bottom:1px solid black;
+
     padding-bottom:10px;
     cursor:pointer;
     transition:.325s;
