--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,14 @@ html{
   -webkit-overflow-scrolling: touch;
 }
 body {
-  max-width: 99vw;
-  max-height: 100vh;
+  max-width: 88vw;
+  max-height:100vh;
+  position:relative;
 	font-family: 'Sans Medium';
 	font-size: 16px;
 	line-height: 1;
 	color: black;
 	margin: 6px 10px 10px 10px;
-  left:16px;
   -webkit-overflow-scrolling: touch;
 
   transition: background-color 0.5s;
@@ -64,15 +64,12 @@ body {
   position:fixed;
   z-index:100;
   display:grid;
-  grid-template-columns: 35vw 38vw 27vw;
+  grid-template-columns: 35% 38% 27%;
   flex-direction: row;
-  width: 98vw;
+  width: 99vw;
   padding-top:6px;
   flex-wrap:wrap;
   left:10px;
-  right:10px;
-  padding-right:10px;
-  margin-right:10px;
   top:0;
   background-color:white;
   -webkit-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
@@ -90,16 +87,14 @@ transition: background-color 0.5s linear;
   font-family: 'Sans Medium';
   letter-spacing:-.2px;
   font-size: 1.8rem;
-  margin-right: 2vw;
+  margin-right: 1vw;
   text-align: left;
   cursor: pointer;
 }
 a{
   color:black;
 }
-.top a:last-of-type{
-  margin-right:10px;
-}
+
 .about{
   justify-self:flex-start;
 }
@@ -130,7 +125,7 @@ a{
 }
 
 #about{
- position: absolute;
+ position: fixed;
  font-size: 1.9em;;
  line-height:1.1;
  font-family: 'Times New Roman';
@@ -147,7 +142,6 @@ a{
  justify-content:space-evenly;
 }
 #about p{
-  mix-blend-mode:multiply;
   grid-row:1;
   grid-column:2;
   max-width:60vw;
@@ -157,7 +151,6 @@ a{
   margin:0;
 }
 #about img{
-  position:relative;
   grid-column:1;
   grid-row:1;
   max-width:90%;
@@ -168,10 +161,10 @@ a{
   justify-self:flex-start
 }
 #draggable-live-region{
-position:absolute;
+position:relative;
 overflow:scroll;
 } 
-#index{
+/*#index{
     position: fixed;
     font-size: 3em;;
     line-height:1.1;
@@ -200,7 +193,7 @@ overflow:scroll;
      margin-top:-8vh;
      height:75vh;
      opacity:.8;
-   }
+   }*/
 
 #label{
   transform-origin: 50% 50%;
@@ -240,12 +233,11 @@ overflow:scroll;
   max-width:100%;
 }
 #homepage{
-  max-width:98vw;
-  max-height:96%;
+  max-width:100vw;
   margin-top:3vh;
-  position:absolute;
+  position:relative;
   top:10px;
-  left:10px;
+  left:0;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -279,7 +271,7 @@ overflow:scroll;
 /*----------------------------------drag shit--------------------------------*/
 .dragTitle{
   font-size: 1.8rem;
-  position:absolute;
+  position:fixed;
   bottom:10px;
   right:10px;
   cursor:pointer;
@@ -294,7 +286,6 @@ overflow:scroll;
   border-radius:40px;
   background-color:transparent;
   width:6px;
-  height:20px;
   margin-right:3px;
   border:1.4px solid black;
   display:none;
