--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,19 @@
+/*#loader{
+    position:fixed;
+    z-index:50;
+    top:0;
+    left:0;
+    height:100%;
+    width: 100%;
+
+    background-color:white;
+
+    animation: type 4s steps(60, end); 
+}
+#loader span{
+    animation: blink 1s infinite;
+  }*/
+
 .back{
     justify-self:flex-end;
 }
@@ -61,7 +77,7 @@
 }
 .more{
     font-family: "Neue Machina";
-    margin-top:60px;
+    margin-top:40px;
     padding-left:10px;
     line-height:1.2;
     margin-bottom:10px;
@@ -180,6 +196,9 @@
     .images{
         grid-column:1/span 4;
         grid-row:1;
+    }
+    .more{
+        margin-bottom: 40px;
     }
     .words{
         grid-column:1/span 2;
