--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,5 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
-body{
-    width:100%;
-}
+
 #projfooter, #projfooter a{
         display:flex;
         color:black;
@@ -20,18 +18,17 @@ body{
     cursor:default;
 }
 #project{
-    position: absolute;
+    position: relative;
+    display: grid;
+    left:0px;
     font-size:16px;
     line-height:1.3;
-    left:0;
-    padding-right:12px;
+    right:10px;
     font-family: "Sans Medium";
-    top: 140px;
-    padding-top:10px;
-    max-width: 99vw;
-    max-height: 100%;
-    display: grid;
-    grid-template-columns:32vw 3vw 63vw 2vw;
+    top: 150px;
+    max-width: 100vw;
+    bottom:150px;
+    grid-template-columns:32% 3% 63% 2%;
     grid-template-rows:auto auto auto auto;
     justify-content:space-between;
     align-items:start;
@@ -50,9 +47,11 @@ body{
     position:relative;
 }
 #project img{
-    position:relative;
     max-width:100%;
+    position:relative;
     cursor:zoom-in;
+    padding-right:0;
+    grid-column: 3/span 4;
 }
 #description{
     align-self:start;
@@ -72,7 +71,7 @@ body{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
-   border-top:1.3px black solid;
+    border-top:1.3px black solid;
     padding-top:0px;
     padding-bottom:0px;
 }
@@ -148,14 +147,16 @@ grid-row:3;
     right:0;
     bottom:0;
     margin:0;
+    display:none;
 }
 .modal-overlay img{
-    position:absolute;
+    position:fixed;
     max-height:85%;
     max-width:90%;
     margin-left:50vw;
     margin-top:50vh;
     transform:translate(-50%, -50%);
+    display:none;
 }
 
 /*-----------------------non-universal changes for specific projects----------------*/
@@ -302,9 +303,6 @@ input:focus::-webkit-slider-runnable-track {
         #description, #description a{
             font-size:20px;
         }
-        #description p{
-            padding-right:24px;
-        }
         .detail{
             font-size:13px;
             margin-bottom:20px;
@@ -315,9 +313,6 @@ input:focus::-webkit-slider-runnable-track {
         }
         #project #label{
             font-size:22px;
-        }
-        #description{
-            width:92vw;
         }
         #projfooter{
             margin-top:80px;
