--- a/css/projects.css
+++ b/css/projects.css
@@ -18,7 +18,7 @@
     cursor:default;
 }
 #project{
-    position: relative;
+    position:relative;
     display: grid;
     left:0px;
     font-size:16px;
@@ -26,7 +26,7 @@
     right:10px;
     font-family: "Sans Medium";
     top: 150px;
-    max-width: 100vw;
+    width: 100vw;
     bottom:150px;
     grid-template-columns:32% 3% 63% 2%;
     grid-template-rows:auto auto auto auto;
@@ -51,7 +51,7 @@
     position:relative;
     cursor:zoom-in;
     padding-right:0;
-    grid-column: 3/span 4;
+   /* grid-column: 3/span 4;*/
 }
 #description{
     align-self:start;
@@ -88,52 +88,32 @@
 grid-column:3;
 grid-row:3;
 }
+#gallery img{
+    margin-bottom:6px;
+}
 
 /*-----------------------various polyptych setups for multiple images in one row----------------*/
 /*---!!!!!-------!!!!-----On mobile, make sure these classes are removed-  !!!!!!     !!!!!------*/
-.diptych{
-    display:inline-flex;
-    flex-direction:row;
-    max-width:100%;
+.diptych, .triptych, .polyptych{
+    display:grid;
+    grid-column-gap:6px;
     justify-content:space-between;
     overflow-x:hidden;
+    width:100%;
 }
-.diptych img{
+.diptych img, .triptych img, .polyptych img{
     position:relative;
-    padding-right:6px;
-    width:50%;
-    align-self:flex-start;
+    width:100%;
+}
+
+.diptych{
+    grid-template-columns:auto auto;
 }
 .triptych{
-    display:inline-grid;
-    grid-template-columns: auto auto auto;
-    grid-column-gap:6px;
-    max-width:100%;
-    justify-content:space-between;
-    overflow-x:hidden;
-    margin-bottom:6px;
-}
-.triptych img{
-    position:relative;
-    padding-right:6px;
-    width:100%;
-    align-self:flex-start;
+    grid-template-columns:auto auto auto;
 }
 .polyptych{
-    display:inline-grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap:6px;
-    grid-row-gap:6px;
-    max-width:100%;
-    justify-content:space-between;
-    overflow-x:hidden;
-    margin-bottom:6px;
-}
-.polyptych img{
-    position:relative;
-    padding-right:6px;
-    width:100%;
-    align-self:flex-start;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 /*-----------------------zoom-in overlay----------------*/
 .modal-overlay{
@@ -150,6 +130,7 @@ grid-row:3;
     display:none;
 }
 .modal-overlay img{
+    z-index:50;
     position:fixed;
     max-height:85%;
     max-width:90%;
