--- a/css/projects.css
+++ b/css/projects.css
@@ -1,18 +1,22 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
+html{
+    margin:0;
+    padding:0;
+}
 body{
     position:absolute;
+    padding:0;
     right:0;
     left:0;
     min-width:100%;
     overflow-x:hidden;
 }
-
 #projfooter, #projfooter a{
         display:flex;
         color:black;
         justify-content:space-between;
         padding-top:40px;
-        margin-bottom:2px;
+        padding-bottom:2px;
         grid-column:3/span 2;
         grid-row:4;
  }
@@ -26,17 +30,15 @@ body{
 }
 #project{
     position:relative;
+    max-width: 100vw;
     display: grid;
     left:0px;
     font-size:16px;
     line-height:1.3;
-    right:10px;
     font-family: "Sans Medium";
     top: 150px;
-    width: 100vw;
-    bottom:150px;
     grid-template-columns:32% 3% 63% 2%;
-    grid-template-rows:auto auto auto auto;
+   /* grid-template-rows:auto auto auto;*/
     justify-content:space-between;
     align-items:start;
 }
@@ -96,7 +98,7 @@ grid-column:3;
 grid-row:3;
 }
 #gallery img{
-    margin-bottom:6px;
+    padding-bottom:6px;
 }
 
 /*-----------------------various polyptych setups for multiple images in one row----------------*/
@@ -306,7 +308,7 @@ input:focus::-webkit-slider-runnable-track {
         }
         #projfooter{
             margin-top:80px;
-            margin-bottom:4px;
+            padding-bottom:2px;
             align-self:flex-end;
             width:65%;
         }
