--- a/css/projects.css
+++ b/css/projects.css
@@ -1,16 +1,4 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
-html{
-    margin:0;
-    padding:0;
-}
-body{
-    position:absolute;
-    padding:0;
-    right:0;
-    left:0;
-    min-width:100%;
-    overflow-x:hidden;
-}
 #projfooter, #projfooter a{
         display:flex;
         color:black;
@@ -32,7 +20,7 @@ body{
     position:relative;
     max-width: 100vw;
     display: grid;
-    left:0px;
+    left:10px;
     font-size:16px;
     line-height:1.3;
     font-family: "Sans Medium";
@@ -294,6 +282,9 @@ input:focus::-webkit-slider-runnable-track {
         }
         #description, #description a{
             font-size:20px;
+        }
+        #description{
+            width:94%;
         }
         .detail{
             font-size:13px;
