--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,16 @@
   src: url('fonts/NeueMachina-Regular.otf')
 }
 
-
+html{
+  min-height:100vh;
+}
 ::selection{
   background-color: yellow;
 }
 
 body {
   margin:0;
+  min-height:100vh;
   position:relative;
 	font-family: 'Sans Medium';
 	font-size: 16px;
@@ -126,7 +129,7 @@ a{
  max-width: 100vw;
  max-height:100vh;
  bottom:160px;
- top:0;
+ top:0px;
  margin-top:80px;
  display: grid;
  grid-template-columns: 35vw 58vw 1fr;
