--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,7 @@
         grid-column:3/span 4;
         grid-row:2;
         justify-content:flex-end;
+        padding-right:24px;
     }
     .buttons a{
         align-self:flex-start;
