--- a/css/projects.css
+++ b/css/projects.css
@@ -5,6 +5,7 @@
         justify-content:space-between;
         padding-top:40px;
         padding-bottom:2px;
+        padding-right:16px;
         grid-column:3/span 2;
         grid-row:4;
  }
