--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
 
 html{
   min-height:100vh;
+  background-color: #dddddd;
 }
 ::selection{
   background-color: yellow;
@@ -64,10 +65,10 @@ body {
   flex-wrap:wrap;
   right:10px;
   top:0;
-  background-color:white;
-  -webkit-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
--moz-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
+  background-color:#dddddd;
+  -webkit-box-shadow: 0px -1px 11px 12px rgba(221,221,221,1);
+-moz-box-shadow: 0px -1px 11px 12px rgba(221,221,221,1);
+box-shadow: 0px -1px 11px 12px rgba(221,221,221,1);
 
 transition-property: background-color, box-shadow;
 transition-duration: 0.5s, .5s;
