--- a/css/style.css
+++ b/css/style.css
@@ -122,17 +122,17 @@ a{
 #about{
  position: absolute;
  font-size: 1.9em;;
- line-height:1.1;
+ line-height:1.15;
  font-family: 'Times New Roman';
- left: 10px;
+ left: 12px;
  right:10px;
  max-width: 100vw;
  max-height:100vh;
  bottom:160px;
  top:0px;
- margin-top:80px;
+ margin-top:70px;
  display: grid;
- grid-template-columns: 35vw 58vw 1fr;
+ grid-template-columns: 35vw 60vw 1fr;
  grid-template-rows: auto;
  justify-content:space-evenly;
 }
@@ -148,7 +148,7 @@ a{
 #about img{
   grid-column:1;
   grid-row:1;
-  max-width:70%;
+  max-width:60%;
   margin:0;
   padding:0;
   margin-right:20px;
@@ -242,6 +242,18 @@ display:none;
 
 
 /*---------------------------------meeeeeeeeeedia queeeeeeeeriiiiiiiiiiiiesssssss-----------*/
+
+@media (max-width: 1100px) {
+  #about{
+    font-size:1.7em;
+  }
+}
+
+@media (max-width: 1000px) {
+  #about{
+    font-size:1.5em;
+  }
+}
 
 @media (max-width: 900px) { 
   #about{
