--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ body {
 	font-size: 18px;
 	line-height: 1;
 	color: black;
-  left:16px;
   overflow-x: hidden;
   margin:0;
 }
@@ -53,7 +52,7 @@ body {
   width: 100%;
   grid-template-columns: 35fr 35fr 30fr 10px;
   flex-direction: row;
-  padding-left:8px;
+  padding-left:16px;
   padding-top:12px;
  /* background-color:#f2f2f2;
   -webkit-box-shadow: 0px -1px 10px 11px #f2f2f2;
@@ -189,7 +188,7 @@ a{
   position:relative;
   margin:0;
   padding:0;
-  max-width:100%;
+  width:100%;
   top:70px;
 }
 .listing{
@@ -207,7 +206,7 @@ a{
 
 /*------------make featured story one huge image rather than 2 thumbnails--------*/
 
-.firstfeature .extender img:nth-of-type(2){
+/*.firstfeature .extender img:nth-of-type(2){
   display:none;
 }
 .firstfeature .extender img{
@@ -217,7 +216,7 @@ a{
 
 .firstfeature .images{
   padding-right:0px;
-}
+}*/
 /*----back 2 our regularly scheduled programming----*/
 .title, .description, .thumbnails{
   grid-row:1;
@@ -434,7 +433,7 @@ a{
     display:none;
   }
   #about{
-    padding-top:0px;
+    padding-top:30px;
     display:none;
     grid-template-columns: 35fr 65fr;
     grid-column-gap:10px;
@@ -453,6 +452,7 @@ a{
     padding-right:6px;
     grid-row:1;
     padding-right:20px;
+    border-bottom:1px black solid;
   }
   #about img{
     display:block;
