--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,17 @@ a{
 .firstfeature .images{
   padding-right:0px;
 }*/
+/*.extender img:nth-of-type(2){
+  display:none;
+}
+.listing .extender img{
+  width:100%;
+  padding-right:0px;
+}
+
+.extender .images{
+  padding-right:0px;
+}*/
 /*----back 2 our regularly scheduled programming----*/
 .title, .description, .thumbnails{
   grid-row:1;
