--- a/css/projects.css
+++ b/css/projects.css
@@ -41,9 +41,8 @@ cursor:default;
     width:100%;
     position:relative;
 }
-i, #description a{
-    font-family:"Saol Display Reg";
-    font-style:italic;
+#description a{
+    text-decoration:underline;
 }
 #project img{
     position:relative;
@@ -56,6 +55,7 @@ i, #description a{
     font-size:17px;
     align-self:start;
     vertical-align:top;
+    font-family: 'Neue Montreal Medium';
     margin:0;
     margin-top:-18px;
     padding-right:36px;
@@ -64,7 +64,6 @@ i, #description a{
     transition:.2s;
 }
 .detail{
-    font-family: "Neue Montreal";
     font-size:14px;
     display:flex;
     flex-direction:row;
@@ -302,7 +301,7 @@ input:focus::-webkit-slider-runnable-track {
 
 /*-----------------------medddddddia queriesssssss------------------------------------*/
 
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
         #label, #label a, .detail{
             font-size:14px;
         }
@@ -347,13 +346,18 @@ input:focus::-webkit-slider-runnable-track {
         }
         #projfooter{
             font-size:22px;
-            margin-top:80px;
+            padding-top:80px;
             margin-bottom:24px;
             align-self:flex-end;
             width:65%;
+            position:relative;
+        }
+        body{
+            position:relative;
         }
         .bottom{
-            margin-bottom:32px;
+            position:absolute;
+            margin-bottom:-43px;
         }
         .modal-overlay img{
             max-width:96%;
