--- a/css/style.css
+++ b/css/style.css
@@ -523,13 +523,16 @@ a{
   .thumbnails img:nth-of-type(3){
     display:none;
   }
+  .thumbnails{
+    display:flex;
+  }
 #fullindex{
   top:20px;
 }
 .listing{
   font-size:22px;
-  padding-top:9px;
-  padding-bottom:9px
+  padding-top:8px;
+  padding-bottom:8px
 }
 .description{
   display:none;
