--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,6 @@
   font-family: "Reconna";
   src:url('fonts/ReconnaSerif.otf');
 }
-/*@font-face{
-  font-family: "Neue Machina";
-  src:url('fonts/NeueMachina-Regular.woff');
-}
-@font-face{
-  font-family: "Neue Montreal Medium";
-  src:url('fonts/AgipoRegular.otf');
-}
-@font-face{
-  font-family: "Neue Montreal";
-  src:url('fonts/AgipoRegular.otf');
-}
-*/
 
 
 
@@ -47,8 +34,8 @@ html{
 }
 body {
 	font-family: 'Neue Montreal Medium';
-	font-size: 18px;
-	line-height: 1;
+	font-size: 17px;
+	line-height: 1.15;
 	color: black;
   overflow-x: hidden;
   margin:0;
@@ -62,21 +49,18 @@ a{
   font-style:italic;
 }
 .main{
-  grid-template-columns: 29% 35.5% 35.5%;
+  /*grid-template-columns: 29% 35.5% 35.5%;*/
+  padding-left: 10px;
 }
 .top{
   position:absolute;
   z-index:100;
   display:grid;
-  width: 100%;
-  grid-template-columns: 35% 32.5% 32.5%;
+  width: 100vw;
+  /*grid-template-columns: 35% 32.5% 32.5%;*/
+  grid-template-columns: 29% 35.5% 28% 7.5%;
   flex-direction: row;
-  padding-left:8px;
   padding-top:12px;
- /* background-color:#f2f2f2;
-  -webkit-box-shadow: 0px -1px 10px 11px #f2f2f2;
- -moz-box-shadow: 0px -1px 10px 11px #f2f2f2;
- box-shadow: 0px -1px 10px 11px #f2f2f2;*/
 
 transition-property: background-color, box-shadow;
 transition-duration: 0.5s, .5s;
@@ -91,7 +75,7 @@ transition: background-color 0.5s linear;
   font-size: 1.8rem;
   text-align: left;
   cursor: pointer;
-  padding-right:10px;
+  /*padding-right:10px;*/
 }
 
 .top, .bottom{
@@ -120,9 +104,6 @@ a{
   text-align:left;
   justify-content:flex-start;
 }
-/*.flip:hover{
-  transform:rotateY(180deg);
-}*/
 .about{
   justify-self:flex-start;
 }
@@ -140,7 +121,8 @@ a{
 #about{
  max-width: 100%;
  display: grid;
- grid-template-columns: 29% 35.5% 35.5%;
+ /*grid-template-columns: 29% 35.5% 35.5%;*/
+ grid-template-columns: 29% 35.5% 28% 7.5%;
  grid-template-rows: auto;
  border-bottom:1px black solid;
 }
@@ -148,7 +130,6 @@ a{
 #about p{
   line-height:1.25;
   padding:0;
-  padding-left:6px;
   margin:0;
 }
 #about .p{
@@ -196,8 +177,6 @@ a{
   justify-content:flex-start;
 }
 .contact a:hover, .p a:hover, .listing a:hover, .more a:hover, #description a:hover{
-  /*border-radius:10px;
-  box-shadow: 0px -1px 16px 4px yellow;*/
   background-color: yellow;
 }
 /*---------------------------------------------index-------------------------------*/
@@ -212,41 +191,17 @@ a{
 .listing{
   max-width: 100%;
   display: grid;
-  padding-left:10px;
+  padding-left:12px;
   padding-top:12px;
   padding-bottom:10px;
   align-items:center;
-  grid-template-columns: 29% 35.5% 35.5%;
+  /*grid-template-columns: 29% 35.5% 35.5%;*/
+  grid-template-columns: 29% 35.5% 28% 7.5%;
   border-bottom:1px solid black;
   cursor:pointer;
   transition: .3s;
 }
 
-/*------------make featured story one huge image rather than 2 thumbnails--------*/
-
-/*.firstfeature .extender img:nth-of-type(2){
-  display:none;
-}
-.firstfeature .extender img{
-  width:100%;
-  padding-right:0px;
-}
-
-.firstfeature .images{
-  padding-right:0px;
-}*/
-/*.extender img:nth-of-type(2){
-  display:none;
-}
-.listing .extender img{
-  width:100%;
-  padding-right:0px;
-}
-
-.extender .images{
-  padding-right:0px;
-}*/
-/*----back 2 our regularly scheduled programming----*/
 .title, .description, .thumbnails{
   grid-row:1;
 }
@@ -272,7 +227,7 @@ a{
 .extender{
   max-width: 100%;
   display: grid;
-  grid-column:1/span 3;
+  grid-column:1/span 4;
   grid-template-columns: 29% 71%;
   grid-template-rows: auto auto auto;
   padding-top:10px;
@@ -306,20 +261,27 @@ a{
 /*.listing:not(.firstfeature) .words{
   display:none;
 }*/
-.year{
-  display:inline-flex;
-  position:relative;
-  padding-right:14px;
+.type{
   grid-column:3;
   grid-row:1;
   align-self:flex-start;
-  /*grid-column:1;
-  grid-row:3;
-  align-self:flex-end;*/
+  padding-right:14px;
+}
+.year{
+  display:inline-flex;
+  position:relative;
+  /*grid-column:3;
+  grid-row:1;
+  align-self:flex-start;*/
+  grid-column:4;
+  grid-row:1;
+  align-self:flex-start;
+  align-content:right;
+  justify-self:flex-end;
 }
 .year span{
   position:relative;
-  margin-right: 24px;
+  margin-right: 14px;
 }
 .projpage{
   grid-row:3;
@@ -342,7 +304,7 @@ a{
   padding-left:10px;
   padding-right:10px;
   line-height:1.2;
-  margin-bottom:20px;
+  margin-bottom:28px;
   background-color:#f2f2f2;
   display:flex;
   flex-direction:row;
@@ -360,41 +322,7 @@ a{
   }
 }*/
 @media (max-width: 900px){
-  /*.extender{
-    padding-top:8px;
-    grid-row-gap:14px;
-    grid-template-columns: 35% 35% 18% 12%;
-    grid-template-rows: auto auto;
-  }
-  .extender img:nth-of-type(2){
-      display:none;
-  }
-  .images{
-      padding-right:0px;
-      grid-column: 1/span 4;
-      grid-row:1;
-  }
-  .images img{
-    width:100%;
-  }
-  .title, .description{
-      padding-right:30px;
-  }
 
-  .words{
-      grid-column:1/span 3;
-      grid-row:2;
-      padding-bottom:0px;
-  }
-    .details{
-      grid-column:4;
-      grid-row:2;
-      justify-self:flex-end;
-  }
-  .details span{
-      margin-right:0px;
-  }
-  */
   #about .p{
     padding-bottom:20px;
     padding-right:14px;
@@ -403,64 +331,6 @@ a{
     font-size:17px;
   }
 }
-
-/*@media(max-width: 850px){
-  #about{
-    padding-top:40px;
-  }
-  #fullindex{
-    top:30px;
-  }
-  .listing{
-    grid-template-columns:35% 50% 15%;
-  }
-  .listing .description{
-   display:none;
-  }
-  .listing .title{
-    grid-column:1/span 2;
-    font-family: 'Neue Montreal Medium';
-    font-size:1.5rem;
-  }
-  .listing .thumbnails{
-    grid-column:3;
-    grid-row:1;
-    align-self:end;
-  }
-  .thumbnails img:nth-of-type(3){
-    display:none;
-  }
-  .firstfeature .words{
-    display:none;
-  }
-  .firstfeature .thumbnails, .firstfeature .title{
-    grid-row:3;
-  }
-  .firstfeature .details{
-    display:none;
-  }
-  .more{
-    padding-bottom: 50px;
-  }
-
-}*/
-
-
-/*@media (max-width: 850px) { 
-  #about .p, #about .contact{
-    grid-column:2/span 3;
-    padding-right:30px;
-}
-#about .p{
-  padding-bottom:0px;
-}
-#about .contact{
-
-    grid-row:2;
-    padding-left:6px;
-    padding-bottom:14px;
-}
-}*/
 
 @media (max-width: 700px){
  .year{
@@ -523,6 +393,7 @@ a{
   }
   .thumbnails{
     display:flex;
+    grid-column:3/span 4;
   }
 #fullindex{
   top:20px;
@@ -532,7 +403,7 @@ a{
   padding-top:8px;
   padding-bottom:8px
 }
-.description{
+.description,.type{
   display:none;
 }
 .title{
@@ -562,7 +433,8 @@ a{
   display:none;
 }
 .more{
-  padding-bottom:40px;
+  padding-bottom:20px;
+  bottom:10px;
 }
 
 
